--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -66,6 +66,7 @@
     <string name="restrict_messages">Съобщения (SMS, MMS)</string>
     <string name="restrict_network">Мрежа (адреси)</string>
     <string name="restrict_notifications">Notifications</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">Телефон (ID, номера, обаждания)</string>
     <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Съхранение (носители, SD карта)</string>
