--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -66,6 +66,7 @@
     <string name="restrict_messages">संदेश (SMS, MMS)</string>
     <string name="restrict_network">नेटवर्क (addresses)</string>
     <string name="restrict_notifications">सूचनाएं</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">फ़ोन (ID, संख्या, कॉल)</string>
     <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">स्टोरेज (मीडिया, SD card)</string>
