--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -66,6 +66,7 @@
     <string name="restrict_messages">Сообщения (SMS, MMS)</string>
     <string name="restrict_network">Сеть (адреса)</string>
     <string name="restrict_notifications">Уведомления</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">Телефон (ID, номера, журнал вызовов)</string>
     <string name="restrict_sensors">Сенсоры</string>
     <string name="restrict_storage">Хранилище (медиа, карта памяти)</string>
