--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -64,6 +64,7 @@
     <string name="restrict_messages">Missatges (SMS, MMS)</string>
     <string name="restrict_network">Xarxa (adreces)</string>
     <string name="restrict_notifications">Notificacions</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">Telèfon (ID, números, trucades)</string>
     <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Emmagatzematge (mitjans, targeta SD)</string>
