--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -64,6 +64,7 @@
     <string name="restrict_messages">Beskeder (SMS, MMS)</string>
     <string name="restrict_network">Netværk (adresser)</string>
     <string name="restrict_notifications">Meddelelser</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">Telefon (ID, numre, opkald)</string>
     <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Hukommelse (medier, SD-kort)</string>
