--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -66,6 +66,7 @@
     <string name="restrict_messages">Nachrichten (SMS, MMS)</string>
     <string name="restrict_network">Netzwerk (-Adressen)</string>
     <string name="restrict_notifications">Benachrichtigungen</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">Telefon (ID, Nummern, Anrufe)</string>
     <string name="restrict_sensors">Sensoren</string>
     <string name="restrict_storage">Speicher (-Medien, SD-Karte)</string>
