--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -66,6 +66,7 @@ kuid on võimatu garanteerida, et see töötab igal seadmel ja iga rakendusega.
     <string name="restrict_messages">Sõnumid (SMS, MMS)</string>
     <string name="restrict_network">Võrk (aadressid)</string>
     <string name="restrict_notifications">Teated</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">Telefon (ID, numbrid, kõned)</string>
     <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Mälu (Meedia, SD kaart)</string>
