--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -66,6 +66,7 @@
     <string name="restrict_messages">Μηνύματα (SMS, MMS)</string>
     <string name="restrict_network">Δίκτυο (διευθύνσεις)</string>
     <string name="restrict_notifications">Ειδοποιήσεις</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">Τηλέφωνο (στοιχεία, αριθμοί, κλήσεις)</string>
     <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Αποθ. χώρος (πολυμέσα, κάρτα SD)</string>
