--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -66,6 +66,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="restrict_messages">Messages (SMS, MMS)</string>
     <string name="restrict_network">Réseaux (addresses)</string>
     <string name="restrict_notifications">Notifications</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">Téléphone (ID, numéros, appels)</string>
     <string name="restrict_sensors">Capteurs</string>
     <string name="restrict_storage">Stockage (média, carte SD)</string>
