--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -66,6 +66,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_messages">הודעות (SMS, MMS)</string>
     <string name="restrict_network">רשת (כתובות)</string>
     <string name="restrict_notifications">Notifications</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">טלפון (זיהוי, מספרים, שיחות)</string>
     <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">אחסון (מדיה, כרטיס SD)</string>
