--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -67,6 +67,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="restrict_messages">Pranešimai (SMS, MMS)</string>
     <string name="restrict_network">Tinklas (adresai)</string>
     <string name="restrict_notifications">Įspėjimai</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">Telefonas (ID, numeris, skambučiai)</string>
     <string name="restrict_sensors">Sensoriai</string>
     <string name="restrict_storage">Atmintis (media, SD kortelė)</string>
