--- a/res/values-nn-rNO/strings.xml
+++ b/res/values-nn-rNO/strings.xml
@@ -64,6 +64,7 @@
     <string name="restrict_messages">Meldinger (SMS, MMS)</string>
     <string name="restrict_network">Nettverk (adresser)</string>
     <string name="restrict_notifications">Varslinger</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">Telefon (ID, nummere, oppringninger)</string>
     <string name="restrict_sensors">Sensorer</string>
     <string name="restrict_storage">Minne (medier, SD kort)</string>
