--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -66,6 +66,7 @@
     <string name="restrict_messages">Wiadomości (SMS, MMS)</string>
     <string name="restrict_network">Sieć (adresy)</string>
     <string name="restrict_notifications">Powiadomienia</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">Telefon (ID, numery, połączenia)</string>
     <string name="restrict_sensors">Czujniki</string>
     <string name="restrict_storage">Storage (media, karta SD)</string>
