--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -66,6 +66,7 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="restrict_messages">Mensagens (SMS, MMS)</string>
     <string name="restrict_network">Rede (endereços)</string>
     <string name="restrict_notifications">Notificações</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">Telefone (identidade, números, chamadas)</string>
     <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Armazenamento (média, cartão de memória)</string>
