--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -66,6 +66,7 @@
     <string name="restrict_messages">Sporočila (SMS, MMS)</string>
     <string name="restrict_network">Omrežje (naslovi)</string>
     <string name="restrict_notifications">Obvestila</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">Telefon (ID, številke, klici)</string>
     <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Pomnilnik (medij, SD kartica)</string>
