--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -65,6 +65,7 @@
     <string name="restrict_messages">Mesajlar (SMS, MMS)</string>
     <string name="restrict_network">Ağ (adresler)</string>
     <string name="restrict_notifications">Notifications</string>
+    <string name="restrict_overlay">Overlay</string>
     <string name="restrict_phone">Telefon (Kimlik, numaralar, aramalar)</string>
     <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Depolama (medya, SD kart)</string>
