--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -116,5 +116,8 @@ sin embargo no puedo garantizar que funcione sin ningún fallo para cada disposi
     <string name="help_frozen">Esta deshabilitado</string>
     <string name="help_dangerous">Es peligroso, restringirlo puede causar problemas</string>
     <string name="help_half">Restringido parcialmente</string>
+    <string name="help_attention">restrictions need attention</string>
+    <string name="help_restricted">restrictions are changed</string>
+    <string name="help_shared">restrictions are submitted</string>
 
 </resources>
