--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -116,5 +116,8 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="help_frozen">is inaktiverad</string>
     <string name="help_dangerous">är farlig</string>
     <string name="help_half">partly restricted</string>
+    <string name="help_attention">restrictions need attention</string>
+    <string name="help_restricted">restrictions are changed</string>
+    <string name="help_shared">restrictions are submitted</string>
 
 </resources>
