--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -116,5 +116,8 @@
     <string name="help_frozen">مُعطل</string>
     <string name="help_dangerous">خطير</string>
     <string name="help_half">تقييد جزئي</string>
+    <string name="help_attention">restrictions need attention</string>
+    <string name="help_restricted">restrictions are changed</string>
+    <string name="help_shared">restrictions are submitted</string>
 
 </resources>
