--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -116,5 +116,8 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="help_frozen">Está desativado</string>
     <string name="help_dangerous">É perigoso</string>
     <string name="help_half">partly restricted</string>
+    <string name="help_attention">restrictions need attention</string>
+    <string name="help_restricted">restrictions are changed</string>
+    <string name="help_shared">restrictions are submitted</string>
 
 </resources>
