--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -117,5 +117,8 @@
     <string name="help_frozen">вимкнено</string>
     <string name="help_dangerous">зміна дозволів небезпечна</string>
     <string name="help_half">частково заборонено</string>
+    <string name="help_attention">restrictions need attention</string>
+    <string name="help_restricted">restrictions are changed</string>
+    <string name="help_shared">restrictions are submitted</string>
 
 </resources>
