--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -115,5 +115,8 @@
     <string name="help_frozen">đã được tắt</string>
     <string name="help_dangerous">nguy hiểm, hạn chế có thể gây lỗi</string>
     <string name="help_half">đã hạn chế một phần</string>
+    <string name="help_attention">restrictions need attention</string>
+    <string name="help_restricted">restrictions are changed</string>
+    <string name="help_shared">restrictions are submitted</string>
 
 </resources>
