msg_saved_to: formatted="false"

--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -37,7 +37,7 @@
     <string name="msg_licensed" formatted="false">Lisensoitu: %s</string>
     <string name="msg_loading">Lataa</string>
     <string name="msg_applying">Applying</string>
-    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Klikkaa applikaation ikonia editoidaksesi kaikki rajoituksia</string>
     <string name="msg_sure">Oletko varma?</string>
