--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -37,7 +37,7 @@
     <string name="msg_licensed" formatted="false">Licencováno na: %s</string>
     <string name="msg_loading">Probíhá načítání</string>
     <string name="msg_applying">Applying</string>
-    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Pro úpravu jednotlivých oprávnění aplikace klikněte na její ikonu</string>
     <string name="msg_sure">Jste si jistý?</string>
