--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -37,7 +37,7 @@
     <string name="msg_licensed" formatted="false">Givet i licens til: %s</string>
     <string name="msg_loading">Indlæser</string>
     <string name="msg_applying">Applying</string>
-    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Klik på app-ikonet for at redigere alle restriktioner</string>
     <string name="msg_sure">Er du sikker?</string>
