--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -37,7 +37,7 @@
     <string name="msg_licensed">Con licencia para: %s</string>
     <string name="msg_loading">Cargando</string>
     <string name="msg_applying">Applying</string>
-    <string name="msg_saved_to">Guardado en %s</string>
+    <string name="msg_saved_to" formatted="false">Guardado en %s</string>
     <string name="msg_no_restrictions">No se han encontrado restricciones</string>
     <string name="msg_edit">Tocar el icono de la aplicación para editar los permisos</string>
     <string name="msg_sure">¿Estas seguro?</string>
