--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -37,7 +37,7 @@
     <string name="msg_licensed" formatted="false">Licenziato a: %s</string>
     <string name="msg_loading">Caricamento in corso</string>
     <string name="msg_applying">Applicazione in corso</string>
-    <string name="msg_saved_to">Salvato su %s</string>
+    <string name="msg_saved_to" formatted="false">Salvato su %s</string>
     <string name="msg_no_restrictions">Nessuna restrizione trovata</string>
     <string name="msg_edit">Clicca l\'icona dell\'applicazione per modificare tutte le restrizioni</string>
     <string name="msg_sure">Sei sicuro?</string>
