--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -37,7 +37,7 @@
     <string name="msg_licensed" formatted="false">יישום מורשה ל: %s</string>
     <string name="msg_loading">טוען</string>
     <string name="msg_applying">Applying</string>
-    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">לחץ על סמל היישום כדי לערוך את כל ההגבלות</string>
     <string name="msg_sure">אתה בטוח?</string>
