--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -37,7 +37,7 @@
     <string name="msg_licensed" formatted="false">ライセンス先: %s</string>
     <string name="msg_loading">読み込み中</string>
     <string name="msg_applying">Applying</string>
-    <string name="msg_saved_to">%sに保存されました</string>
+    <string name="msg_saved_to" formatted="false">%sに保存されました</string>
     <string name="msg_no_restrictions">制限などは見つかりませんでした</string>
     <string name="msg_edit">アプリアイコンをタップすると全ての権限の制限を設定できます</string>
     <string name="msg_sure">続行しますか</string>
