--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -38,7 +38,7 @@
     <string name="msg_licensed" formatted="false">licencija: %s</string>
     <string name="msg_loading">Palaukite...</string>
     <string name="msg_applying">Vykdoma</string>
-    <string name="msg_saved_to">Išsaugomi %s</string>
+    <string name="msg_saved_to" formatted="false">Išsaugomi %s</string>
     <string name="msg_no_restrictions">Nerasta ribojimų</string>
     <string name="msg_edit">Spustelėkite programos piktogramą norėdami redaguoti ribojimus</string>
     <string name="msg_sure">Įsitikinę?</string>
