--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -37,7 +37,7 @@
     <string name="msg_licensed" formatted="false">Licencjonowane dla: %s</string>
     <string name="msg_loading">Ładowanie</string>
     <string name="msg_applying">Stosowanie</string>
-    <string name="msg_saved_to">Zapisane do %s</string>
+    <string name="msg_saved_to" formatted="false">Zapisane do %s</string>
     <string name="msg_no_restrictions">Nie znaleziono ograniczeń</string>
     <string name="msg_edit">Kliknij na ikonę aplikacji aby zmodyfikować poszczególne ograniczenia</string>
     <string name="msg_sure">Czy jesteś pewny/a?</string>
