--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -37,7 +37,7 @@
     <string name="msg_licensed" formatted="false">Licensed to: %s</string>
     <string name="msg_loading">A carregar</string>
     <string name="msg_applying">Applying</string>
-    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Clique no ícone da aplicação para editar todas as restrições</string>
     <string name="msg_sure">Tem a certeza?</string>
