--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -37,7 +37,7 @@
     <string name="msg_licensed" formatted="false">%s adına lisanslıdır.</string>
     <string name="msg_loading">Yükleniyor</string>
     <string name="msg_applying">Applying</string>
-    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Tüm izinleri düzenlemek için uygulamanın simgesine dokun</string>
     <string name="msg_sure">Emin misin?</string>
