--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -37,7 +37,7 @@
     <string name="msg_licensed" formatted="false">授權給: %s</string>
     <string name="msg_loading">載入中...</string>
     <string name="msg_applying">Applying</string>
-    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">找不到限制規則</string>
     <string name="msg_edit">點選app圖示以檢視並修改限制規則</string>
     <string name="msg_sure">確定進行操作?</string>
