--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -37,6 +37,7 @@
     <string name="msg_licensed" formatted="false">مرخص ل: %s</string>
     <string name="msg_loading">جاري التحميل</string>
     <string name="msg_applying">تطبيق</string>
+    <string name="msg_applied">Template applied</string>
     <string name="msg_saved_to" formatted="false">حُفِظت في  %s</string>
     <string name="msg_no_restrictions">لا توجد قيود</string>
     <string name="msg_edit">إضغط ايقونة التطبيق لتعديل كل القيود</string>
