--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -39,6 +39,7 @@
     <string name="msg_licensed" formatted="false">%s مجوز به: </string>
     <string name="msg_loading">در حال بارگذاری</string>
     <string name="msg_applying">Applying</string>
+    <string name="msg_applied">Template applied</string>
     <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">برای ویرایش تمامی محدودیت ها بر روی آیکون نرم افزار مورد نظر کلیک کنید</string>
