--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -36,7 +36,8 @@
     <string name="msg_update">Bijgewerkt</string>
     <string name="msg_licensed" formatted="false">In licentie gegeven aan: %s</string>
     <string name="msg_loading">Laden</string>
-    <string name="msg_applying">Applying</string>
+    <string name="msg_applying">Toepassen</string>
+    <string name="msg_applied">Sjabloon toegepast</string>
     <string name="msg_saved_to" formatted="false">Bewaard als %s</string>
     <string name="msg_no_restrictions">Geen beperkingen gevonden</string>
     <string name="msg_edit">Klik op het applicatiepictogram om alle beperkingen te wijzigen</string>
